# HubbardModel2D

./: .gitignore  CMakeLists.txt  Hubbard2D.cpp  Hubbard2D.hpp  LICENSE.md  README.md  eigenref.patch  main.cpp  main_mult.cpp
